<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/idTv"
        android:textSize="18sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/id"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/fNameTv"
        android:textSize="18sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/firstname"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/lNameTv"
        android:textSize="18sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/lastname"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ageTv"
        android:textSize="18sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/age"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/genderTv"
        android:textSize="18sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editBtn"
            android:text="@string/edit"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:padding="0dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="45dp"/>

        <Button
            android:id="@+id/deleteBtn"
            android:text="@string/delete"
            android:layout_marginStart="10dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:padding="0dp"
            android:layout_width="wrap_content"
            android:layout_height="45dp"/>

    </LinearLayout>

</LinearLayout>