<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    android:elevation="2dp"
    android:background="?attr/selectableItemBackground"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/numTv"
            android:textSize="16sp"
            android:text="1"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/fullNameTv"
            android:textSize="16sp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/ageTv"
            android:textSize="16sp"
            android:text="18"
            android:textColor="@color/black"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/editBtn"
            android:text="@string/edit"
            android:layout_marginEnd="5dp"
            android:textAllCaps="false"
            android:padding="0dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:layout_width="60dp"
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/deleteBtn"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/red"
            android:padding="0dp"
            android:layout_width="70dp"
            android:layout_height="40dp"/>

        <ImageView
            android:id="@+id/infoBtn"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/info"
            android:src="@drawable/ic_info"
            app:tint="@color/purple_700"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:focusable="true" />

    </LinearLayout>

</androidx.cardview.widget.CardView>